force-app/main/default/objects/IssueStatus__c/IssueStatus__c.object-meta.xml
<CustomObject>
	<description>Objeto para la gestión de los estados de las issues para cada proyecto</description>
	<label>Issue Status</label>
	<pluralLabel>Issue Statuses</pluralLabel>
	<sharingModel>ReadWrite</sharingModel>
	<nameField>
		<label>Issue Status Name</label>
		<type>Text</type>
	</nameField>
</CustomObject>