force-app/main/default/objects/IssueStatus__c/fields/Active__c.field-meta.xml
<CustomField>
	<defaultValue>false</defaultValue>
	<fullName>Active__c</fullName>
	<label>Active</label>
	<type>Checkbox</type>
</CustomField>