force-app/main/default/objects/IssueStatus__c/fields/ButtonName__c.field-meta.xml
<CustomField>
    <fullName>ButtonName__c</fullName>
    <description>Nombre del botón en el panel de Workflow para controlar el flujo de trabajo de las issues</description>
    <label>Button Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>