force-app/main/default/objects/IssueStatus__c/fields/ButtonOrder__c.field-meta.xml
<CustomField>
	<description>Órden en el que se mostrará el botón de dicho estado en el panel de Workflow</description>
	<fullName>ButtonOrder__c</fullName>
	<label>Button Order</label>
	<precision>18</precision>
	<scale>0</scale>
	<type>Number</type>
</CustomField>