force-app/main/default/objects/IssueStatus__c/fields/ButtonVariant__c.field-meta.xml
<CustomField>
	<description>Tipo de botón que se quiere mostrar en el workflow para este estado</description>
	<fullName>ButtonVariant__c</fullName>
	<label>Button Variant</label>
	<type>Picklist</type>
	<valueSet>
		<restricted>true</restricted>
		<valueSetDefinition>
			<value><default>false</default><fullName>base</fullName><label>base</label></value>
			<value><default>false</default><fullName>neutral</fullName><label>neutral</label></value>
			<value><default>false</default><fullName>brand</fullName><label>brand</label></value>
			<value><default>false</default><fullName>brand-outline</fullName><label>brand-outline</label></value>
			<value><default>false</default><fullName>destructive</fullName><label>destructive</label></value>
			<value><default>false</default><fullName>destructive-text</fullName><label>destructive-text</label></value>
			<value><default>false</default><fullName>inverse</fullName><label>inverse</label></value>
			<value><default>false</default><fullName>success</fullName><label>success</label></value>
		</valueSetDefinition>
	</valueSet>
</CustomField>