force-app/main/default/objects/IssueStatus__c/fields/CommentRequired__c.field-meta.xml
<CustomField>
	<defaultValue>false</defaultValue>
	<description>Indica si es obligatorio escribir un comentario cuando cambia se establece el estado en la issue</description>
	<fullName>CommentRequired__c</fullName>
	<label>Comment Required</label>
	<type>Checkbox</type>
</CustomField>