force-app/main/default/objects/IssueStatus__c/fields/Icon__c.field-meta.xml
<CustomField>
	<fullName>Icon__c</fullName>
	<label>Icon</label>
	<length>255</length>
	<type>Text</type>
</CustomField>