force-app/main/default/objects/IssueStatus__c/fields/Initial__c.field-meta.xml
<CustomField>
	<defaultValue>false</defaultValue>
	<fullName>Initial__c</fullName>
	<label>Initial</label>
	<type>Checkbox</type>
</CustomField>