force-app/main/default/objects/IssueStatus__c/fields/Project__c.field-meta.xml
<CustomField>
	<deleteConstraint>Restrict</deleteConstraint>
	<fullName>Project__c</fullName>
	<label>Project</label>
	<referenceTo>Project__c</referenceTo>
	<relationshipLabel>Issue Statuses</relationshipLabel>
	<relationshipName>Issue_Statuses</relationshipName>
	<required>true</required>
	<type>Lookup</type>
</CustomField>