force-app/main/default/objects/IssueStatus__c/fields/Type__c.field-meta.xml
<CustomField>
	<fullName>Type__c</fullName>
	<label>Type</label>
	<required>true</required>
	<type>Picklist</type>
	<valueSet>
		<restricted>true</restricted>
		<valueSetDefinition>
			<value><default>false</default><fullName>opened</fullName><label>opened</label></value>
			<value><default>false</default><fullName>progress</fullName><label>progress</label></value>
			<value><default>false</default><fullName>blocked</fullName><label>blocked</label></value>
			<value><default>false</default><fullName>closed</fullName><label>closed</label></value>
		</valueSetDefinition>
	</valueSet>
</CustomField>